# zenith-backend

./: .env.example  Dockerfile  ML_IMPLEMENTATION_SUMMARY.md  README.md  README_QUICKSTART.md  celerybeat-schedule  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_fix_enum_values.py  003_add_market_tables.py  004_add_broker_tables.py  005_add_subscription_tables.py  006_add_analytics_tables.py  007_add_multiple_portfolios.py  008_add_community_tables.py  009_add_api_keys.py  010_add_notifications.py  011_add_user_settings.py  012_add_newsletter.py
src/: main.py
src/ai/: strategy_recommendation.py
src/ai/backtesting/: __init__.py  engine.py  strategies.py
src/ai/llm/: client.py
src/ai/ml/: __init__.py  feature_engineering.py  model_trainer.py  models.py
src/ai/predictive/: __init__.py  price_forecast.py  risk_metrics.py  sentiment_analysis.py  technical_analysis.py
src/ai/rag/: __init__.py  financial_rag.py  knowledge_ingestion.py
src/api/v1/: router.py
src/core/: config.py  database.py  deps.py  exceptions.py  security.py  websocket.py
src/integrations/brokers/: __init__.py  base.py  btg.py  inter.py  nuinvest.py  xp.py
src/integrations/market_data/: base.py  brapi.py  yahoo_finance.py
src/mcp/: __init__.py  client.py  tools.py
src/middleware/: __init__.py  rate_limit.py
src/ml/: README.md  __init__.py
src/ml/data/: __init__.py  data_fetcher.py  data_preprocessor.py
src/ml/features/: __init__.py  feature_pipeline.py  technical_indicators.py
src/ml/models/: __init__.py  ensemble_model.py  lstm_model.py  model_registry.py
src/ml/prediction/: __init__.py  cache.py  predictor.py
src/ml/training/: __init__.py  evaluation.py  trainer.py
src/models/: __init__.py  alert.py  analytics.py  api_key.py  broker.py  chat.py  community.py  market.py  newsletter.py  notification.py  portfolio.py  profile.py  settings.py  subscription.py  user.py
src/schemas/: alert.py  auth.py  broker.py  chat.py  market.py  portfolio.py  profile.py  settings.py  subscription.py  user.py
src/services/: auth.py  broker.py  chat.py  community_strategies.py  email.py  lgpd.py  market.py  portfolio.py  profile.py  public_api.py  recommendation.py  reports.py  subscription.py  usage_limits.py  user.py
src/utils/: financial_calculations.py
src/workers/: celery_app.py
tests/: conftest.py  test_ml_cache.py  test_ml_models.py  test_ml_predictor.py
tests/unit/: test_alerts.py  test_auth.py  test_broker.py  test_market.py  test_portfolio.py
(+29 files in other folders)
