[tool.poetry]
name = "investai-backend"
version = "0.1.0"
description = "InvestAI Platform - Backend API with AI-powered investment analysis"
authors = ["InvestAI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"

# Redis
redis = {extras = ["hiredis"], version = "^5.2.0"}

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.0"

# Validation
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.6.0"

# AI/ML - Open Source
langchain = "^0.3.7"
langchain-community = "^0.3.5"
sentence-transformers = "^3.3.0"

# Vector Database
qdrant-client = "^1.12.0"

# ML/Data Science
numpy = "^2.1.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
scikit-learn = "^1.5.0"
torch = "^2.5.0"
transformers = "^4.46.0"
xgboost = "^2.1.0"
optuna = "^4.0.0"

# Market Data
yfinance = "^0.2.48"
alpha-vantage = "^2.3.1"

# Task Queue
celery = {extras = ["redis"], version = "^5.4.0"}

# HTTP Client
httpx = "^0.27.0"
aiohttp = "^3.11.0"

# Payments
stripe = "^11.0.0"

# Utilities
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
faker = "^33.0.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
